--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
         <h1>Odin Recipes</h1>
 
         <a href ="recipes/friedrice.html">Fried rice</a>
+        <a href="recipes/waffles.html">Waffles</a>
+        <a href="recipes/shawarma.html">Shawarma</a>
     </body>
 </html>
