--- a/recipes/friedrice.html
+++ b/recipes/friedrice.html
@@ -7,6 +7,34 @@
     </head>
     <body>
         <h1>Friedrice </h1>
+        <img src="../pictures/friedrice.jpg" alt="Fried Rice" width="300" height="200">
+        <br>
+        <h2> Description</h2>
+        <p>Fried rice is a popular Asian dish made from pre-cooked rice that is stir-fried in a wok or a frying pan with ingredients 
+            such as vegetables, eggs, and meat. It is often seasoned with soy sauce, garlic, and other spices to enhance its flavor.</p>
+        <h3> Ingredients </h3>
+        <ul>
+            <li>⅔ cup chopped baby carrots</li>
+            <li>½ cup frozen green peas</li>
+            <li>2 tablespoons vegetable oil</li>
+            <li>1 clove garlic, minced, or to taste (Optional)</li>
+            <li>2 large eggs</li>
+            <li>3 cups leftover cooked and chilled white rice</li>
+            <li>1 tablespoon soy sauce, or more to taste</li>
+            <li>2 teaspoons sesame oil, or to taste</li>
+        </ul>
+
+        <h3> Steps </h3>
+        <ol>
+            <li>Heat a large skillet or wok over medium-high heat. Add the vegetable oil and swirl to coat the pan.</li>
+            <li>Add the chopped carrots and frozen peas. Stir-fry for about 2-3 minutes until the vegetables are tender.</li>
+            <li>Add the minced garlic (if using) and stir-fry for another 30 seconds until fragrant.</li>
+            <li>Push the vegetables to one side of the pan. Crack the eggs into the empty side and scramble them until fully cooked.</li>
+            <li>Add the chilled rice to the pan, breaking up any clumps. Stir everything together until well combined.</li>
+            <li>Pour in the soy sauce and sesame oil, mixing thoroughly to ensure even distribution.</li>
+            <li>Cook for an additional 2-3 minutes, stirring frequently, until the rice is heated through.</li>
+            <li>Adjust seasoning with more soy sauce or sesame oil if desired. Serve hot.</li>
+        </ol>
 
         <a href="../index.html">Home</a>
     </body>
